[gd_scene load_steps=5 format=3 uid="uid://bp6ensit2uqm2"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_ps6tc"]

[sub_resource type="LabelSettings" id="LabelSettings_fhs78"]
font_size = 128

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qyu2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wvqk0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ps6tc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Multiplayer Pong"
label_settings = SubResource("LabelSettings_fhs78")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_qyu2m")
text = "Host"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_wvqk0")
text = "Join"

[node name="ClosePeerButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_wvqk0")
text = "Close Peer"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ClosePeerButton" to="." method="_on_close_peer_button_pressed"]
